  type to be ignored (see tests/typing-misc/constraints.ml).
  (Jacques Garrigue, report by Richard Eisenberg, review by Leo White)

- #12207, #12222: Make closure computation linear in the number of recursive
  functions instead of quadratic
  (Vincent Laviron, report by François Pottier, review by Nathanaëlle Courant
  and Gabriel Scherer)

- #12334, #12368: Bad error message with mutually recursive abbreviations
  (Jacques Garrigue, report by Richard Eisenberg, review by Gabriel Scherer
   and Richard Eisenberg)

- #12401: `seek_in` and `seek_out` sometimes returned normally when given
  negative offsets, instead of failing. Now both functions should consistently
  raise `Sys_error` in this case.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #12267: Fix stack alignment computation
  (Miod Vallat, report by Jan Midtgaard, review by Gabriel Scherer)

- #12395, #12404: Fix thread-unsafety in the fallback implementation of
  `Unix.create_process` (the one used when `posix_spawnp` is unavailable)
  (Xavier Leroy, report by Chris Vine, review by Nicolás Ojeda Bär)

- #12949: open shadowing mistriggers
  (Gabriel Scherer, review by Florian Angeletti, report by Andreas Rossberg)

OCaml 5.1.0
---------------

### Restored backends

- #11418, #11708: RISC-V multicore support.
  (Nicolás Ojeda Bär, review by KC Sivaramakrishnan)

- #11712, #12258, #12261: s390x / IBM Z multicore support:
  OCaml & C stack separation; dynamic stack size checks; fiber and
  effects support.
  (Aleksei Nikiforov, with help from Vincent Laviron and Xavier Leroy,
   additional suggestions by Luc Maranget,
   review by the same and KC Sivaramakrishnan)

- #11642: Restore Cygwin port. Add GC messages for address space reservations
  when OCAMLRUNPARAM option v includes 0x1000.
  (David Allsopp, review by Xavier Leroy, Guillaume Munch-Maccagnoni
  and Gabriel Scherer)

### Standard library:

- #12006, #12064: Add `Marshal.Compression` flag to `Marshal.to_*` functions.