@@ -1,0 +1,102 @@
+(* repro case for #12238: a typing error here *)
+let error = 1 2
+(* ... followed by enough code to fill the lexing buffer (1024 bytes) *)
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
+let _ = 0123456789
